--- a/package.json
+++ b/package.json
@@ -1,134 +1,140 @@
 {
-    "name": "SociosMTS",
-    "version": "1.0.1",
-    "author": "Mitocondria",
-    "homepage": "https://www.mitocondria.cl",
-    "private": true,
-    "scripts": {
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "lint": "ionic-app-scripts lint",
-        "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
-    },
-    "dependencies": {
-        "@angular/common": "5.0.1",
-        "@angular/compiler": "5.0.1",
-        "@angular/compiler-cli": "5.0.1",
-        "@angular/core": "5.0.1",
-        "@angular/forms": "5.0.1",
-        "@angular/http": "5.0.1",
-        "@angular/platform-browser": "5.0.1",
-        "@angular/platform-browser-dynamic": "5.0.1",
-        "@ionic-native/android-full-screen": "4.4.0",
-        "@ionic-native/app-version": "4.4.0",
-        "@ionic-native/call-number": "4.4.0",
-        "@ionic-native/camera": "4.4.0",
-        "@ionic-native/contacts": "4.4.0",
-        "@ionic-native/core": "4.4.0",
-        "@ionic-native/email-composer": "4.4.0",
-        "@ionic-native/google-analytics": "^4.4.0",
-        "@ionic-native/google-maps": "4.4.0",
-        "@ionic-native/keyboard": "4.4.0",
-        "@ionic-native/network": "4.4.0",
-        "@ionic-native/photo-viewer": "4.4.0",
-        "@ionic-native/screen-orientation": "4.4.0",
-        "@ionic-native/splash-screen": "4.4.0",
-        "@ionic-native/status-bar": "4.4.0",
-        "@ionic/storage": "2.1.3",
-        "@types/pouchdb": "6.3.0",
-        "angular2-jwt": "^0.2.3",
-        "angular2-moment": "^1.7.0",
-        "call-number": "^1.0.1",
-        "chart.js": "^2.7.1",
-        "com-sarriaroman-photoviewer": "^1.1.10",
-        "cordova-android": "^6.2.3",
-        "cordova-ios": "^4.4.0",
-        "cordova-plugin-app-version": "^0.1.9",
-        "cordova-plugin-camera": "^2.4.1",
-        "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-contacts": "^2.3.1",
-        "cordova-plugin-device": "^1.1.4",
-        "cordova-plugin-email-composer": "^0.8.11",
-        "cordova-plugin-file": "^4.3.3",
-        "cordova-plugin-file-transfer": "^1.6.3",
-        "cordova-plugin-fullscreen": "^1.2.0",
-        "cordova-plugin-google-analytics": "^1.8.3",
-        "cordova-plugin-googlemaps": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps.git#multiple_maps",
-        "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
-        "cordova-plugin-network-information": "^1.3.3",
-        "cordova-plugin-screen-orientation": "^2.0.1",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-sqlite-2": "^1.0.4",
-        "cordova-plugin-statusbar": "^2.2.2",
-        "cordova-plugin-whitelist": "^1.3.1",
-        "es6-promise-plugin": "git+https://github.com/vstirbu/PromisesPlugin.git",
-        "font-awesome": "4.7.0",
-        "imgcache.js": "^1.1.1",
-        "ionic-angular": "nightly",
-        "ionic-cache": "^2.0.5",
-        "ionic-plugin-keyboard": "^2.2.1",
-        "ionicons": "3.0.0",
-        "jquery": "^3.2.1",
-        "ng2-truncate": "^1.3.10",
-        "pouchdb": "^6.3.4",
-        "rxjs": "5.5.2",
-        "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.18"
-    },
-    "devDependencies": {
-        "@ionic/app-scripts": "nightly",
-        "typescript": "2.4.2"
-    },
-    "cordovaPlugins": [
-        "cordova-plugin-whitelist",
-        "cordova-plugin-console",
-        "cordova-plugin-statusbar",
-        "cordova-plugin-device",
-        "cordova-plugin-splashscreen",
-        "ionic-plugin-keyboard"
-    ],
-    "cordovaPlatforms": [
-        "ios",
-        {
-            "platform": "ios",
-            "version": "",
-            "locator": "ios"
-        }
-    ],
-    "description": "SociosMTS",
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-sqlite-2": {},
-            "cordova-plugin-camera": {},
-            "cordova-plugin-device": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
-            "cordova-plugin-fullscreen": {},
-            "com-sarriaroman-photoviewer": {},
-            "cordova-plugin-network-information": {},
-            "cordova-plugin-googlemaps": {
-                "API_KEY_FOR_ANDROID": "AIzaSyAtUoEPdkAj1sA_t0tolgBJlg_rM1es1iI",
-                "API_KEY_FOR_IOS": "AIzaSyDZ-3R98e0u_1uy2N4x6cDl1qU4JuvSXsI",
-                "LOCATION_WHEN_IN_USE_DESCRIPTION": "Show your location on the map",
-                "LOCATION_ALWAYS_USAGE_DESCRIPTION": "Trace your location on the map"
-            },
-            "ionic-plugin-keyboard": {},
-            "cordova-plugin-file-transfer": {},
-            "cordova-plugin-file": {},
-            "cordova-plugin-app-version": {},
-            "cordova-plugin-contacts": {
-                "CONTACTS_USAGE_DESCRIPTION": "Save users of Ferreterias and Proveedores to your contacts"
-            },
-            "mx.ferreyra.callnumber": {},
-            "cordova-plugin-email-composer": {},
-            "cordova-plugin-screen-orientation": {},
-            "cordova-plugin-google-analytics": {}
-        },
-        "platforms": [
-            "android",
-            "ios"
-        ]
+  "name": "SociosMTS",
+  "version": "1.0.1",
+  "author": "Mitocondria",
+  "homepage": "https://www.mitocondria.cl",
+  "private": true,
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  },
+  "dependencies": {
+    "@angular/common": "5.0.1",
+    "@angular/compiler": "5.0.1",
+    "@angular/compiler-cli": "5.0.1",
+    "@angular/core": "5.0.1",
+    "@angular/forms": "5.0.1",
+    "@angular/http": "5.0.1",
+    "@angular/platform-browser": "5.0.1",
+    "@angular/platform-browser-dynamic": "5.0.1",
+    "@ionic-native/android-full-screen": "4.4.2",
+    "@ionic-native/app-version": "4.4.2",
+    "@ionic-native/call-number": "4.4.2",
+    "@ionic-native/camera": "4.4.2",
+    "@ionic-native/contacts": "4.4.2",
+    "@ionic-native/core": "4.4.2",
+    "@ionic-native/email-composer": "4.4.2",
+    "@ionic-native/geolocation": "^4.4.2",
+    "@ionic-native/google-analytics": "4.4.2",
+    "@ionic-native/google-maps": "4.4.2",
+    "@ionic-native/keyboard": "4.4.2",
+    "@ionic-native/network": "4.4.2",
+    "@ionic-native/photo-viewer": "4.4.2",
+    "@ionic-native/screen-orientation": "4.4.2",
+    "@ionic-native/splash-screen": "4.4.2",
+    "@ionic-native/status-bar": "4.4.2",
+    "@ionic/storage": "2.1.3",
+    "@types/pouchdb": "6.3.0",
+    "angular2-jwt": "^0.2.3",
+    "angular2-moment": "^1.7.0",
+    "call-number": "^1.0.1",
+    "chart.js": "^2.7.1",
+    "com-sarriaroman-photoviewer": "^1.1.11",
+    "cordova-android": "6.3.0",
+    "cordova-ios": "4.5.3",
+    "cordova-plugin-app-version": "^0.1.9",
+    "cordova-plugin-camera": "^2.4.1",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-contacts": "^2.3.1",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-email-composer": "^0.8.11",
+    "cordova-plugin-file": "^5.0.0",
+    "cordova-plugin-file-transfer": "^1.7.0",
+    "cordova-plugin-fullscreen": "^1.2.0",
+    "cordova-plugin-geolocation": "^3.0.0",
+    "cordova-plugin-google-analytics": "^1.8.3",
+    "cordova-plugin-googlemaps": "^2.1.1",
+    "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
+    "cordova-plugin-network-information": "^1.3.4",
+    "cordova-plugin-screen-orientation": "^2.0.2",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-sqlite-2": "^1.0.4",
+    "cordova-plugin-statusbar": "^2.3.0",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "es6-promise-plugin": "^4.1.1",
+    "font-awesome": "4.7.0",
+    "imgcache.js": "^1.1.1",
+    "ionic-angular": "nightly",
+    "ionic-cache": "^2.0.5",
+    "ionic-plugin-keyboard": "^2.2.1",
+    "ionicons": "3.0.0",
+    "jquery": "^3.2.1",
+    "mx.ferreyra.callnumber": "~0.0.2",
+    "ng2-truncate": "^1.3.10",
+    "pouchdb": "^6.3.4",
+    "rxjs": "5.5.2",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.18"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "nightly",
+    "typescript": "2.4.2"
+  },
+  "cordovaPlugins": [
+    "cordova-plugin-whitelist",
+    "cordova-plugin-console",
+    "cordova-plugin-statusbar",
+    "cordova-plugin-device",
+    "cordova-plugin-splashscreen",
+    "ionic-plugin-keyboard"
+  ],
+  "cordovaPlatforms": [
+    "ios",
+    {
+      "platform": "ios",
+      "version": "",
+      "locator": "ios"
     }
+  ],
+  "description": "SociosMTS",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-sqlite-2": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-fullscreen": {},
+      "com-sarriaroman-photoviewer": {},
+      "cordova-plugin-network-information": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-app-version": {},
+      "cordova-plugin-contacts": {
+        "CONTACTS_USAGE_DESCRIPTION": "Save users of Ferreterias and Proveedores to your contacts"
+      },
+      "mx.ferreyra.callnumber": {},
+      "cordova-plugin-email-composer": {},
+      "cordova-plugin-screen-orientation": {},
+      "cordova-plugin-google-analytics": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyAtUoEPdkAj1sA_t0tolgBJlg_rM1es1iI",
+        "API_KEY_FOR_IOS": "AIzaSyDZ-3R98e0u_1uy2N4x6cDl1qU4JuvSXsI",
+        "LOCATION_WHEN_IN_USE_DESCRIPTION": "Show your location on the map",
+        "LOCATION_ALWAYS_USAGE_DESCRIPTION": "Trace your location on the map"
+      },
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": "To locate your nearest Ferreteria"
+      }
+    },
+    "platforms": [
+      "android",
+      "ios"
+    ]
+  }
 }
