--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "SociosMTS",
-  "version": "1.0.1",
+  "name": "com.mts.sociosmts",
+  "version": "1.0.2",
   "author": "Mitocondria",
   "homepage": "https://www.mitocondria.cl",
   "private": true,
@@ -12,30 +12,30 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "5.0.1",
-    "@angular/compiler": "5.0.1",
-    "@angular/compiler-cli": "5.0.1",
-    "@angular/core": "5.0.1",
-    "@angular/forms": "5.0.1",
-    "@angular/http": "5.0.1",
-    "@angular/platform-browser": "5.0.1",
-    "@angular/platform-browser-dynamic": "5.0.1",
-    "@ionic-native/android-full-screen": "4.4.2",
-    "@ionic-native/app-version": "4.4.2",
-    "@ionic-native/call-number": "4.4.2",
-    "@ionic-native/camera": "4.4.2",
-    "@ionic-native/contacts": "4.4.2",
-    "@ionic-native/core": "4.4.2",
-    "@ionic-native/email-composer": "4.4.2",
-    "@ionic-native/geolocation": "^4.4.2",
-    "@ionic-native/google-analytics": "4.4.2",
-    "@ionic-native/google-maps": "4.4.2",
-    "@ionic-native/keyboard": "4.4.2",
-    "@ionic-native/network": "4.4.2",
-    "@ionic-native/photo-viewer": "4.4.2",
-    "@ionic-native/screen-orientation": "4.4.2",
-    "@ionic-native/splash-screen": "4.4.2",
-    "@ionic-native/status-bar": "4.4.2",
+    "@angular/common": "^5.0.1",
+    "@angular/compiler": "^5.0.1",
+    "@angular/compiler-cli": "^5.0.1",
+    "@angular/core": "^5.0.1",
+    "@angular/forms": "^5.0.1",
+    "@angular/http": "^5.0.1",
+    "@angular/platform-browser": "^5.0.1",
+    "@angular/platform-browser-dynamic": "^5.0.1",
+    "@ionic-native/android-full-screen": "4.5.2",
+    "@ionic-native/app-version": "4.5.2",
+    "@ionic-native/call-number": "4.5.2",
+    "@ionic-native/camera": "4.5.2",
+    "@ionic-native/contacts": "4.5.2",
+    "@ionic-native/core": "4.5.2",
+    "@ionic-native/email-composer": "4.5.2",
+    "@ionic-native/geolocation": "4.5.2",
+    "@ionic-native/google-analytics": "4.5.2",
+    "@ionic-native/google-maps": "4.5.2",
+    "@ionic-native/keyboard": "4.5.2",
+    "@ionic-native/network": "4.5.2",
+    "@ionic-native/photo-viewer": "4.5.2",
+    "@ionic-native/screen-orientation": "4.5.2",
+    "@ionic-native/splash-screen": "4.5.2",
+    "@ionic-native/status-bar": "4.5.2",
     "@ionic/storage": "2.1.3",
     "@types/pouchdb": "6.3.0",
     "angular2-jwt": "^0.2.3",
@@ -44,7 +44,7 @@
     "chart.js": "^2.7.1",
     "com-sarriaroman-photoviewer": "^1.1.11",
     "cordova-android": "6.3.0",
-    "cordova-ios": "4.5.3",
+    "cordova-ios": "4.5.4",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-compat": "^1.2.0",
