--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.mts.sociosmts",
-  "version": "1.0.2",
+  "version": "2.0.1",
   "author": "Mitocondria",
   "homepage": "https://www.mitocondria.cl",
   "private": true,
@@ -42,7 +42,7 @@
     "angular2-moment": "^1.7.0",
     "call-number": "^1.0.1",
     "chart.js": "^2.7.1",
-    "com-sarriaroman-photoviewer": "^1.1.11",
+    "com-sarriaroman-photoviewer": "^1.1.16",
     "cordova-android": "6.3.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-app-version": "^0.1.9",
@@ -50,21 +50,21 @@
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-contacts": "^2.3.1",
     "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-email-composer": "^0.8.11",
-    "cordova-plugin-file": "^5.0.0",
-    "cordova-plugin-file-transfer": "^1.7.0",
+    "cordova-plugin-email-composer": "^0.8.15",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-fullscreen": "^1.2.0",
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-google-analytics": "^1.8.3",
-    "cordova-plugin-googlemaps": "^2.1.1",
+    "cordova-plugin-googlemaps": "^2.2.5",
     "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
     "cordova-plugin-network-information": "^1.3.4",
     "cordova-plugin-screen-orientation": "^2.0.2",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-sqlite-2": "^1.0.4",
-    "cordova-plugin-statusbar": "^2.3.0",
+    "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
-    "es6-promise-plugin": "^4.1.1",
+    "es6-promise-plugin": "^4.2.2",
     "font-awesome": "4.7.0",
     "imgcache.js": "^1.1.1",
     "ionic-angular": "nightly",
@@ -72,7 +72,7 @@
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "jquery": "^3.2.1",
-    "mx.ferreyra.callnumber": "~0.0.2",
+    "mx.ferreyra.callnumber": "0.0.2",
     "ng2-truncate": "^1.3.10",
     "pouchdb": "^6.3.4",
     "rxjs": "5.5.2",
@@ -126,11 +126,14 @@
         "API_KEY_FOR_ANDROID": "AIzaSyAtUoEPdkAj1sA_t0tolgBJlg_rM1es1iI",
         "API_KEY_FOR_IOS": "AIzaSyDZ-3R98e0u_1uy2N4x6cDl1qU4JuvSXsI",
         "LOCATION_WHEN_IN_USE_DESCRIPTION": "Show your location on the map",
-        "LOCATION_ALWAYS_USAGE_DESCRIPTION": "Trace your location on the map"
+        "LOCATION_ALWAYS_USAGE_DESCRIPTION": "Trace your location on the map",
+        "PLAY_SERVICES_VERSION": "11.8.0",
+        "ANDROID_SUPPORT_V4_VERSION": "24.1.0"
       },
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate your nearest Ferreteria"
-      }
+      },
+      "call-number": {}
     },
     "platforms": [
       "android",
